--- a/headding.html
+++ b/headding.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <style>
+         <style>
         /* Base Styles */
         body {
-            font-family: Arial, sans-serif;
+            font-family: TH Sarabun , TH Sarabun New;
             font-size: 12px;
             margin: 0;
             padding: 20px;
@@ -35,11 +31,11 @@
 
         /* Header Styles */
         .section-header {
+            font-size: 12px;
             padding: 8px;
             padding-right: 30px;
             font-weight: bold;
             margin-bottom: 5px;
-            font-size: 16px;
         }
 
         .po-header {
@@ -53,8 +49,6 @@
             font-weight: bold;
             font-size: 16px;
             padding: 8px;
-            border: 2px solid #8b0000;
-            display: inline-block;
             margin-bottom: 10px;
         }
 
@@ -199,5 +193,3 @@
             </div>
         </div>
     </div>
-</body>
-</html>
