--- a/headding.html
+++ b/headding.html
@@ -1,221 +1,214 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <style>
-        /* Base Styles - PDF Compatible */
-        @page {
-            size: A4;
-            margin: 15mm;
-        }
+<style>
+    /* Base Styles - PDF Compatible */
+    body {
+        font-family: "TH Sarabun New", "TH Sarabun", Arial, sans-serif;
+        font-size: 12px;
+        margin: 0;
+        padding: 20px;
+        line-height: 1.5;
+        color: #000;
+    }
 
-        body {
-            font-family: "TH Sarabun New", "TH Sarabun", Arial, sans-serif;
-            font-size: 12px;
-            margin: 0;
-            padding: 20px;
-            line-height: 1.5;
-            color: #000;
-        }
+    /* Layout using tables */
+    .layout-table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 15px;
+    }
 
-        /* Layout using tables instead of flexbox */
-        .layout-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 15px;
-        }
+    .layout-table td {
+        vertical-align: top;
+        padding: 5px;
+    }
 
-        .layout-table td {
-            vertical-align: top;
-            padding: 5px;
-        }
+    .half-width {
+        width: 50%;
+    }
 
-        .half-width {
-            width: 50%;
-        }
-
-        /* Header Styles */
-        .custom-section-header {
+    /* Header Styles */
+    .custom-section-header {
         font-size: 12px;
         padding: 8px;
         padding-right: 30px;
         font-weight: bold;
         margin-bottom: 5px;
-        }   
+    }   
 
-        .po-header {
-            text-align: right;
-            margin-right: 5px;
-        }
+    .po-header {
+        text-align: right;
+        margin-right: 5px;
+    }
 
-        .draft-status {
-            text-align: center;
-            color: #8b0000;
-            font-weight: bold;
-            font-size: 16px;
-            padding: 8px;
-            margin-bottom: 10px;
-        }
+    .draft-status {
+        text-align: center;
+        color: #8b0000;
+        font-weight: bold;
+        font-size: 16px;
+        padding: 8px;
+        margin-bottom: 10px;
+    }
 
-        /* Table Styles */
-        .info-table {
-            width: 45%;
-            margin-left: auto;
-            margin-top: 0;
-            border-collapse: collapse;
-        }
+    /* Table Styles */
+    .info-table {
+        width: 45%;
+        margin-left: auto;
+        margin-top: 0;
+        border-collapse: collapse;
+    }
 
-        .info-table td:first-child {
-            width: 50px;
-            text-align: left;
-            padding-right: 8px;
-            padding-left: 8px;
-            white-space: nowrap;
-            vertical-align: middle;
-        }
+    .info-table td:first-child {
+        width: 50px;
+        text-align: left;
+        padding-right: 8px;
+        padding-left: 8px;
+        white-space: nowrap;
+        vertical-align: middle;
+    }
 
-        .info-table td:last-child {
-            width: 120px;
-            text-align: left;
-            padding-left: 5px;
-            white-space: nowrap;
-            vertical-align: middle;
-        }
+    .info-table td:last-child {
+        width: 120px;
+        text-align: left;
+        padding-left: 5px;
+        white-space: nowrap;
+        vertical-align: middle;
+    }
 
-        .info-table td {
-            padding: 5px;
-            font-weight: bold;
-            font-size: 10px;
-        }
+    .info-table td {
+        padding: 5px;
+        font-weight: bold;
+        font-size: 10px;
+    }
 
-        /* Box Styles */
-        .address-box {
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 10px;
-            min-height: 80px;
-            font-size: 12px;
-        }
+    /* Box Styles */
+    .address-box {
+        border: 1px solid #ddd;
+        padding: 10px;
+        margin-bottom: 10px;
+        min-height: 80px;
+        font-size: 12px;
+    }
 
-        .terms-box {
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-top: 1px;
-        }
+    .terms-box {
+        border: 1px solid #ddd;
+        padding: 10px;
+        margin-top: 1px;
+    }
 
-        .terms-table {
-            width: 100%;
-            border-collapse: collapse;
-        }
+    .terms-table {
+        width: 100%;
+        border-collapse: collapse;
+    }
 
-        .terms-table td {
-            padding: 5px 15px;
-            width: 50%;
-        }
+    .terms-table td {
+        padding: 5px 15px;
+        width: 50%;
+    }
 
-        /* Text Elements */
-        .supplier-name, .warehouse-name {
-            font-weight: bold;
-            font-size: 12px;
-            margin-bottom: 5px;
-            display: block;
-        }
+    /* Text Elements */
+    .supplier-name, .warehouse-name {
+        font-weight: bold;
+        font-size: 12px;
+        margin-bottom: 5px;
+        display: block;
+    }
 
-        .tax-id {
-            display: block;
-            margin-top: 5px;
-            font-size: 10px;
-        }
+    .tax-id {
+        display: block;
+        margin-top: 5px;
+        font-size: 10px;
+    }
 
-        .terms-label {
-            font-weight: bold;
-            font-size: 10px;
-            display: inline-block;
-        }
+    .terms-label {
+        font-weight: bold;
+        font-size: 10px;
+        display: inline-block;
+    }
 
-        .terms-value {
-            font-size: 10px;
-            display: inline-block;
-            padding-left: 30px;
-        }
+    .terms-value {
+        font-size: 10px;
+        display: inline-block;
+        padding-left: 30px;
+    }
 
-        /* Print specific */
-        @media print {
-            body {
-                -webkit-print-color-adjust: exact;
-                print-color-adjust: exact;
-            }
+    /* Print specific */
+    @media print {
+        body {
+            color-adjust: exact;
         }
-    </style>
-</head>
-<body>
-    <!-- Draft Status -->
-    {% if doc.docstatus == 0 %}
-    <table class="layout-table">
+    }
+</style>
+
+{% if doc.docstatus == 0 %}
+<table class="layout-table">
+    <tr>
+        <td class="half-width">
+            <div class="draft-status">DRAFT</div>
+        </td>
+        <td class="half-width"></td>
+    </tr>
+</table>
+{% endif %}
+
+<table class="layout-table">
+    <tr>
+        <td class="half-width"></td>
+        <td class="half-width">
+            <div class="section-header po-header">Purchase Order</div>
+            <table class="info-table">
+                <tr>
+                    <td>Date:</td>
+                    <td>
+                        {% set date_obj = frappe.utils.getdate(doc.transaction_date or doc.posting_date) %}
+                        {{ "{:02d}/{:02d}/{}".format(date_obj.day, date_obj.month, date_obj.year) }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>No:</td>
+                    <td>{{ doc.name }}</td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
+<table class="layout-table">
+    <tr>
+        <td class="half-width">
+           <div class="custom-section-header">Vendor Address:</div>
+            <div class="address-box">
+                <span class="supplier-name">{{ doc.supplier_name or "N/A" }}</span>
+                {{ doc.address_display or doc.supplier_address or "N/A" }}<br>
+                <span class="tax-id">เลขประจำตัวผู้เสียภาษี: {{ doc.tax_id or "N/A" }}</span>
+            </div>
+        </td>
+        <td class="half-width">
+            <div class="custom-section-header">Ship To:</div>
+            <div class="address-box">
+                <span class="warehouse-name">{{ doc.set_warehouse or "N/A" }}</span>
+                {{ doc.shipping_address_display or doc.address_display or "N/A" }}
+            </div>
+        </td>
+    </tr>
+</table>
+
+<div class="terms-box">
+    <table class="terms-table">
         <tr>
-            <td class="half-width">
-                <div class="draft-status">DRAFT</div>
+            <td>
+                <span class="terms-label">Payment Term:</span>
+                <span class="terms-value">{{ doc.payment_terms_template or "NET 30 DAYS" }}</span>
             </td>
-            <td class="half-width"></td>
+            <td>
+                <span class="terms-label">Delivery Date:</span>
+                <span class="terms-value">
+                    {% if doc.schedule_date %}
+                        {% set delivery_date = frappe.utils.getdate(doc.schedule_date) %}
+                        {{ "{:02d}/{:02d}/{}".format(delivery_date.day, delivery_date.month, delivery_date.year) }}
+                    {% else %}
+                        N/A
+                    {% endif %}
+                </span>
+            </td>
         </tr>
     </table>
-    {% endif %}
-
-    <!-- Document Header -->
-    <table class="layout-table">
-        <tr>
-            <td class="half-width"></td>
-            <td class="half-width">
-                <div class="section-header po-header">Purchase Order</div>
-                <table class="info-table">
-                    <tr>
-                        <td>Date:</td>
-                        <td>{{ doc.transaction_date or doc.posting_date }}</td>
-                    </tr>
-                    <tr>
-                        <td>No:</td>
-                        <td>{{ doc.name }}</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-
-    <!-- Address Information -->
-    <table class="layout-table">
-        <tr>
-            <td class="half-width">
-               <div class="custom-section-header">Vendor Address:</div>
-                <div class="address-box">
-                    <span class="supplier-name">{{ doc.supplier_name or "N/A" }}</span>
-                    {{ doc.address_display or doc.supplier_address or "N/A" }}<br>
-                    <span class="tax-id">เลขประจำตัวผู้เสียภาษี: {{ doc.tax_id or "N/A" }}</span>
-                </div>
-            </td>
-            <td class="half-width">
-                <div class="custom-section-header">Ship To:</div>
-                <div class="address-box">
-                    <span class="warehouse-name">{{ doc.set_warehouse or "N/A" }}</span>
-                    {{ doc.shipping_address_display or doc.address_display or "N/A" }}
-                </div>
-            </td>
-        </tr>
-    </table>
-
-    <!-- Terms Information -->
-    <div class="terms-box">
-        <table class="terms-table">
-            <tr>
-                <td>
-                    <span class="terms-label">Payment Term:</span>
-                    <span class="terms-value">{{ doc.payment_terms_template or "NET 30 DAYS" }}</span>
-                </td>
-                <td>
-                    <span class="terms-label">Delivery Date:</span>
-                    <span class="terms-value">{{ doc.schedule_date or "N/A" }}</span>
-                </td>
-            </tr>
-        </table>
-    </div>
-</body>
-</html>
+</div>
